Header styles and menu shifting bug caused by slow javascript fix

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,9 @@ header#header a, nav a {
   text-decoration: none; }
 
 .mobile body {
-  padding-top: 75px; }
+  padding-top: 155px; }
+  .mobile body.single {
+    padding-top: 75px; }
 .mobile body > section > header,
 .mobile body > section > article,
 .mobile body > section > footer {
@@ -30,22 +32,26 @@ header#header a, nav a {
 .tablet.portrait body {
   padding-top: 100px; }
 .tablet.portrait > section {
+  position: relative;
+  background-color: white;
   padding: 50px auto;
   width: 100%; }
 
 .tablet .landscape body {
   padding-top: 100px; }
 .tablet .landscape > section {
+  position: relative;
+  background-color: white;
   padding: 50px auto;
   width: 90%; }
 
 .desktop body {
   padding-top: 100px; }
   .desktop body > section {
-    padding-top: 250px;
-    width: 80%;
-    min-width: 0;
-    max-width: 1500px; }
+    position: relative;
+    background-color: white;
+    padding: 100px 15%;
+    width: 70%; }
 .desktop header#header h1 a {
   padding-left: 0; }
 .desktop #header_wrapper {
@@ -65,7 +71,7 @@ body > footer {
 
 body > section,
 body > footer {
-  padding-top: 50px; }
+  padding: 80px 0; }
 
 img {
   width: 100%;
@@ -125,35 +131,13 @@ section.breadcrumbs {
     display: inline-block;
     vertical-align: middle; }
 
-.mobile header#header {
+header#header {
   position: fixed;
   top: 0;
   width: 100%;
   height: auto;
   min-height: 75px;
-  z-index: 100; }
-  .mobile header#header a {
-    display: block;
-    width: 100%;
-    height: 100%;
-    padding: 15px 10%; }
-    .mobile header#header a:hover, .mobile header#header a:visited {
-      color: #f8f8f8; }
-.mobile div#title {
-  display: inline-block; }
-.mobile h1 {
-  font-size: 1.2em;
-  padding: 16px 12px 0; }
-.mobile h2 {
-  font-size: 1.1em;
-  padding: 5px 12px 0; }
-.mobile a#title_link {
-  padding: 0 !important; }
-.mobile img#header_icon {
-  width: auto !important;
-  height: 75px !important; }
-
-header#header {
+  z-index: 100;
   background-color: #f8f8f8;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); }
   header#header.closed ul {
@@ -161,19 +145,18 @@ header#header {
   header#header.open ul {
     margin-top: 0; }
   header#header h1 {
-    font-family: "Convergence", sans-serif; }
+    font-family: "Convergence", sans-serif;
+    font-size: 1.2em;
+    padding: 16px 12px 0; }
   header#header h2 {
-    font-size: 0.6em; }
+    font-size: 0.8em;
+    padding: 5px 12px 0; }
   header#header a, header#header a:hover, header#header a:visited, header#header a:active {
     font-family: "Roboto", sans-serif;
     font-weight: 100;
     color: #443f35; }
   header#header .current-menu-item > a {
-    background-color: rgba(118, 113, 103, 0.1); }
-  header#header li {
-    border-top: 1px solid rgba(118, 113, 103, 0.1); }
-    header#header li:hover {
-      background-color: rgba(118, 113, 103, 0.1); }
+    text-decoration: underline; }
   header#header img#navigation_button {
     position: fixed;
     top: 20px;
@@ -182,6 +165,19 @@ header#header {
     height: 35px;
     border: none;
     cursor: pointer; }
+  header#header div#title {
+    display: inline-block; }
+  header#header a#title_link {
+    padding: 0 !important; }
+  header#header nav a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 15px 0 15px 85px; }
+
+header#header img#header_icon {
+  width: 75px !important;
+  height: 75px !important; }
 
 .tablet header#header, .desktop header#header {
   height: 80px;
@@ -207,6 +203,11 @@ header#header {
     padding: 5px 0 0 2px; }
   .tablet header#header nav, .desktop header#header nav {
     float: right; }
+    .tablet header#header nav a, .desktop header#header nav a {
+      display: inline-block;
+      width: auto !important;
+      height: auto !important;
+      padding: 0; }
   .tablet header#header li, .desktop header#header li {
     display: inline-block;
     padding: 5px 30px;
@@ -217,16 +218,40 @@ header#header {
     .tablet header#header li:last-child, .desktop header#header li:last-child {
       border-right: none;
       padding-right: 0; }
+  .tablet header#header #header_wrapper, .desktop header#header #header_wrapper {
+    height: 80px; }
 
 #intro {
-  text-align: center; }
+  text-align: center;
+  width: 100%;
+  margin: -100px 0 0 0;
+  padding: 0;
+  z-index: 0 !important;
+  position: fixed;
+  top: 0;
+  left: 0; }
   #intro img {
     width: 55%; }
   #intro video {
-    width: 600px;
-    height: 337px;
-    background-color: black;
-    -webkit-mask-image: url("../svg/head.svg"); }
+    position: relative;
+    width: 100%; }
+
+div#intro-text-container {
+  position: relative;
+  padding: 5% 0 8%;
+  text-align: center; }
+
+blockquote#intro-text {
+  display: inline-block;
+  width: 60%;
+  padding: 75px 50px;
+  color: #f8f8f8;
+  background-color: rgba(124, 176, 169, 0.9);
+  border-radius: 3px;
+  font-size: 1.9em;
+  font-weight: 100;
+  letter-spacing: 0.1em;
+  font-family: "Roboto", sans-serif; }
 
 .card {
   display: inline-block;
