--- a/css/modules/_intro.sass
+++ b/css/modules/_intro.sass
@@ -1,11 +1,38 @@
 #intro
   text-align: center
+  width: 100%
+  margin: -100px 0 0 0
+  padding: 0
+  z-index: 0 !important
+  position: fixed
+  top: 0
+  left: 0
 
   img
     width: 55%
 
   video
-    width: 600px
-    height: 337px
-    background-color: rgba(0, 0, 0, 1)
-    -webkit-mask-image: url( '../svg/head.svg' )
+    position: relative
+    width: 100%
+    //-webkit-mask-image: url( '../svg/head.svg' )
+
+div#intro-text-container
+  position: relative
+  padding:    5% 0 8%
+
+  //height:     704px
+  //margin-top: -450px
+  text-align: center
+
+blockquote#intro-text
+  display: inline-block
+  width:      60%
+  padding:    75px 50px
+  color:      $primary-light
+  background-color: rgba(124, 176, 169, 0.9)
+  border-radius: 3px
+  font-size: 1.9em
+  font-weight: 100
+  letter-spacing: 0.1em
+  font-family: $font-2
+
