--- a/css/root/_base.sass
+++ b/css/root/_base.sass
@@ -1,6 +1,8 @@
 .mobile
   body
-    padding-top: 75px
+    padding-top: 155px
+    &.single
+      padding-top: 75px
 
   body > section > header,
   body > section > article,
@@ -19,6 +21,8 @@
     body
       padding-top: 100px
     &> section
+      position: relative
+      background-color: rgba(255,255,255,1)
       padding: 50px auto
       width: $width-tablet-portrait
 
@@ -27,6 +31,8 @@
     body
       padding-top: 100px
     &> section
+      position: relative
+      background-color: rgba(255,255,255,1)
       padding: 50px auto
       width: $width-tablet-landscape
 
@@ -34,11 +40,10 @@
   body
     padding-top: 100px
     &> section
-      padding-top: 250px
-
-      width: $width-desktop
-      min-width: $width-desktop-min
-      max-width: $width-desktop-max
+      position: relative
+      background-color: rgba(255,255,255,1)
+      padding: 100px 15%
+      width: 70%
 
   header#header
     h1
@@ -64,7 +69,9 @@ body > footer
 
 body > section,
 body > footer
-  padding-top: 50px
+  padding: 80px 0
+
+
 
 img
   width: 100%
